movies/26IRDEMO/_tool/saas-center-platform/infra/k8s/staging/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindscope-admin-svc
  namespace: mindscope-staging
spec:
  selector:
    app: mindscope-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
